salesforce_sfdx/main/default/objects/Case/fields/Contact_Us_Subtopic__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Subtopic__c</fullName>
    <description>IMS project: This object supports IMS ContactUs functionality of Vlocity custom OmniScript. We do not create records of this type; we just consume its picklist attributes.</description>
    <label>Contact Us Subtopic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Contact_Us_Topic__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Health coverage</fullName>
            </value>
            <value>
                <fullName>Dental coverage</fullName>
            </value>
            <value>
                <fullName>Vision coverage</fullName>
            </value>
            <value>
                <fullName>Drug coverage</fullName>
            </value>
            <value>
                <fullName>Out of country coverage</fullName>
            </value>
            <value>
                <fullName>Personal or dependant information</fullName>
            </value>
            <value>
                <fullName>Pending claims</fullName>
            </value>
            <value>
                <fullName>Forms or cards</fullName>
            </value>
            <value>
                <fullName>Report suspected fraud</fullName>
            </value>
            <value>
                <fullName>Fund information</fullName>
            </value>
            <value>
                <fullName>Transaction information</fullName>
            </value>
            <value>
                <fullName>Tax receipts</fullName>
            </value>
            <value>
                <fullName>Enroling in plans</fullName>
            </value>
            <value>
                <fullName>Email ID reset</fullName>
            </value>
            <value>
                <fullName>Password reset</fullName>
            </value>
            <value>
                <fullName>Available optional benefits plans</fullName>
            </value>
            <value>
                <fullName>Available optional savings plans</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Multiple topics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Claims history/details</fullName>
                <isActive>false</isActive>
                <label>Claims history/details</label>
            </value>
            <value>
                <fullName>Coverage balances</fullName>
                <isActive>false</isActive>
                <label>Coverage balances</label>
            </value>
            <value>
                <fullName>Direct deposit</fullName>
                <isActive>false</isActive>
                <label>Direct deposit</label>
            </value>
            <value>
                <fullName>Other coverage</fullName>
                <isActive>false</isActive>
                <label>Other coverage</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>