salesforce_sfdx/main/default/objects/Case/fields/Contact_Us_Topic__c.field-meta.xml
<CustomField>
    <fullName>Contact_Us_Topic__c</fullName>
    <description>IMS project: This object supports IMS ContactUs functionality of Vlocity custom OmniScript. We do not create records of this type; we just consume its picklist attributes.</description>
    <label>Contact Us Topic</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IMS_User_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Technical support</fullName>
            </value>
            <value>
                <fullName>Additional financial needs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>