salesforce_sfdx/main/default/objects/Case/fields/IMS_User_Type__c.field-meta.xml
<CustomField>
    <fullName>IMS_User_Type__c</fullName>
    <description>This field is going to store user type for which the case was created and also it would be used to filter the picklist values</description>
    <label>IMS User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GLH</fullName>
            </value>
            <value>
                <fullName>GRS</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>